--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>My GitHub Pages</title>
+</head>
+<body>
+  <h1>Welcome to My GitHub Pages</h1>
+
+  <h2>Categories:</h2>
+  <ul>
+    <li><a href="dairy.html">Category 1</a></li>
+    <li><a href="summary.html">Category 2</a></li>
+    <li><a href="others.html">Category 3</a></li>
+  </ul>
+</body>
+</html>
