--- a/dairy.html
+++ b/dairy.html
@@ -5,12 +5,11 @@
   <title>Category 1 - My GitHub Pages</title>
 </head>
 <body>
-  <h1>Category 1</h1>
-
-  <h2>Article 1</h2>
-  <p>This is the content of Article 1.</p>
-
-  <h2>Article 2</h2>
-  <p>This is the content of Article 2.</p>
+  <ul>
+    <li><a href="dairy/20240112.html">日记 2024</a></li>
+  </ul>
+  <h2>20240112</h2>
+  <p>今天感觉非常好。开始用github.io写博客了。撺掇身边的人跟我一起做自媒体，但是没有成功，很难说动本无意愿的人跟我一起做事。</p>
+  <p>其他的不想写了，下次折腾一下hugo。那个专门用来写日记吧。</p>
 </body>
 </html>
