--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <h2>Categories:</h2>
   <ul>
-    <li><a href="dairy.html">Category 1</a></li>
-    <li><a href="summary.html">Category 2</a></li>
-    <li><a href="others.html">Category 3</a></li>
+    <li><a href="dairy.html">日记</a></li>
+    <li><a href="summary.html">总结个人经验</a></li>
+    <li><a href="others.html">其他</a></li>
   </ul>
 </body>
 </html>
